@@ -2513,8 +2513,8 @@ int ntfs_write_inode(struct inode *vi, int sync)
 	 * this function returns.
 	 */
 	if (modified && !NInoTestSetDirty(ctx->ntfs_ino))
-		mark_ntfs_record_dirty(NTFS_I(ni->vol->mft_ino),
-				ctx->ntfs_ino->page, ctx->ntfs_ino->page_ofs);
+		mark_ntfs_record_dirty(ctx->ntfs_ino->page,
+				ctx->ntfs_ino->page_ofs);
 	ntfs_attr_put_search_ctx(ctx);
 	/* Now the access times are updated, write the base mft record. */
 	if (NInoDirty(ni))
